--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -66,3 +66,4 @@ obj-y				+= qcom/
 obj-$(CONFIG_HAPTIC_DRV2605)	+= drv2605.o
 obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
 obj-$(CONFIG_SENSORS_STM401) += stm401/
+obj-$(CONFIG_MOT_UTAG) += utag/
