arm: msm: expose RAM Info in sysfs
Add module reading RAM Info from SMEM and exposing it
under /sys/ram.

Signed-off-by: Alexander Filonenko <vtp684@motorola.com>
(cherry picked from commit f73f83ea3e752899ceda36850a437e59507e2397)

Change-Id: I2edee22ca636290ce9f0e35e0076496b922054c7
(cherry picked from commit 194eb742ab2bf0fbb202e2e1864308f1e0f8a05f)

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1435,4 +1435,11 @@ config MMI_SOC_INFO
 	bool "Motorola Mobility SOC Info"
 	help
 	  Provide mechanism to export MSM SOC info.
+
+config MMI_RAM_INFO
+	depends on ARCH_MSM
+	default n
+	bool "Motorola Mobility RAM Info"
+	help
+	Provide mechanism to access RAM size and MR registers values via sysfs.
 endif
