mako: defconfig: remove ARCH_MSM8930
Change-Id: I1ec16af0d476f69e28ea20562a6c86b7e9d159d9

--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -34,7 +34,6 @@ CONFIG_EFI_PARTITION=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
-CONFIG_ARCH_MSM8930=y
 CONFIG_ARCH_APQ8064=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
 CONFIG_MACH_MSM_DUMMY=y
@@ -78,6 +77,7 @@ CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_WATCHDOG=y
 CONFIG_MSM_DLOAD_MODE=y
+CONFIG_MSM_ULTRASOUND=y
 CONFIG_MSM_CACHE_ERP=y
 CONFIG_MSM_L1_ERR_PANIC=y
 CONFIG_MSM_L2_ERP_2BIT_PANIC=y
