mako: Disable MSM VCAP
We doesn't use the MSM VCAP for vidoe capture and video processing

Change-Id: Ie61a5571c09526167618b0a6d6acb341c70c7708

--- a/arch/arm/configs/mako_defconfig
+++ b/arch/arm/configs/mako_defconfig
@@ -354,6 +354,7 @@ CONFIG_VIDEO_V4L2_SUBDEV_API=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_VIDEOBUF2_MSM_MEM=y
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
+# CONFIG_MSM_VCAP is not set
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
