--- a/arch/arm/configs/ext_config/eng_bld.config
+++ b/arch/arm/configs/ext_config/eng_bld.config
@@ -31,3 +31,16 @@ CONFIG_FAULT_INJECTION_DEBUG_FS=y
 CONFIG_CPU_FREQ_SWITCH_PROFILER=y
 CONFIG_MSM_RTB=y
 CONFIG_MSM_RTB_SEPARATE_CPUS=y
+CONFIG_INPUT_EVBUG=m
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
+CONFIG_SPI_SPIDEV=m
+CONFIG_USB_GADGET_DEBUG_FILES=y
+CONFIG_MMC_TEST=m
+CONFIG_MOBICORE_SUPPORT=m
+CONFIG_MOBICORE_API=m
+CONFIG_CORESIGHT_EVENT=m
+CONFIG_MAGIC_SYSRQ=y
+CONFIG_LOCKUP_DETECTOR=y
+CONFIG_MSM_RESET_MODEM=m
+CONFIG_MSM_DMA_TEST=m
+CONFIG_MSM_BUSPM_DEV=m
