--- a/arch/arm/configs/msm8960_defconfig
+++ b/arch/arm/configs/msm8960_defconfig
@@ -42,28 +42,28 @@ CONFIG_EFI_PARTITION=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8960=y
 CONFIG_MACH_MSM8960_MMI=y
-CONFIG_ARCH_MSM8930=y
-CONFIG_ARCH_APQ8064=y
+# CONFIG_ARCH_MSM8930 is not set
+# CONFIG_ARCH_APQ8064 is not set
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
-CONFIG_MACH_MSM8960_SIM=y
-CONFIG_MACH_MSM8960_RUMI3=y
-CONFIG_MACH_MSM8960_CDP=y
-CONFIG_MACH_MSM8960_MTP=y
-CONFIG_MACH_MSM8960_FLUID=y
-CONFIG_MACH_MSM8960_LIQUID=y
-CONFIG_MACH_MSM8930_CDP=y
-CONFIG_MACH_MSM8930_MTP=y
-CONFIG_MACH_MSM8930_FLUID=y
-CONFIG_MACH_MSM8627_CDP=y
-CONFIG_MACH_MSM8627_MTP=y
-CONFIG_MACH_APQ8064_SIM=y
-CONFIG_MACH_APQ8064_RUMI3=y
-CONFIG_MACH_APQ8064_CDP=y
-CONFIG_MACH_APQ8064_MTP=y
-CONFIG_MACH_APQ8064_LIQUID=y
-CONFIG_MACH_MPQ8064_CDP=y
-CONFIG_MACH_MPQ8064_HRD=y
-CONFIG_MACH_MPQ8064_DTV=y
+# CONFIG_MACH_MSM8960_SIM is not set
+# CONFIG_MACH_MSM8960_RUMI3 is not set
+# CONFIG_MACH_MSM8960_CDP is not set
+# CONFIG_MACH_MSM8960_MTP is not set
+# CONFIG_MACH_MSM8960_FLUID is not set
+# CONFIG_MACH_MSM8960_LIQUID is not set
+# CONFIG_MACH_MSM8930_CDP is not set
+# CONFIG_MACH_MSM8930_MTP is not set
+# CONFIG_MACH_MSM8930_FLUID is not set
+# CONFIG_MACH_MSM8627_CDP is not set
+# CONFIG_MACH_MSM8627_MTP is not set
+# CONFIG_MACH_APQ8064_SIM is not set
+# CONFIG_MACH_APQ8064_RUMI3 is not set
+# CONFIG_MACH_APQ8064_CDP is not set
+# CONFIG_MACH_APQ8064_MTP is not set
+# CONFIG_MACH_APQ8064_LIQUID is not set
+# CONFIG_MACH_MPQ8064_CDP is not set
+# CONFIG_MACH_MPQ8064_HRD is not set
+# CONFIG_MACH_MPQ8064_DTV is not set
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 # CONFIG_MSM_FIQ_SUPPORT is not set
@@ -88,7 +88,6 @@ CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
 CONFIG_MSM_WCNSS_SSR_8960=y
-CONFIG_MSM_GSS_SSR_8064=y
 CONFIG_MSM_BUS_SCALING=y
 CONFIG_MSM_BUS_RPM_MULTI_TIER_ENABLED=y
 CONFIG_MSM_EVENT_TIMER=y
@@ -287,15 +286,10 @@ CONFIG_QSEECOM=y
 CONFIG_SEC_DRIVER=y
 CONFIG_USB_HSIC_SMSC_HUB=y
 CONFIG_C55_CTRL=y
-CONFIG_SCSI=y
-CONFIG_SCSI_TGT=y
+# CONFIG_SCSI is not set
 CONFIG_BLK_DEV_SD=y
 CONFIG_CHR_DEV_SG=y
 CONFIG_CHR_DEV_SCH=y
-CONFIG_SCSI_MULTI_LUN=y
-CONFIG_SCSI_CONSTANTS=y
-CONFIG_SCSI_LOGGING=y
-CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_MD=y
 CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
@@ -312,9 +306,6 @@ CONFIG_PPPOPNS=y
 # CONFIG_MSM_RMNET is not set
 CONFIG_MSM_RMNET_BAM=y
 CONFIG_MSM_RMNET_SMUX=y
-CONFIG_SMC91X=y
-CONFIG_SMC911X=y
-CONFIG_SMSC911X=y
 CONFIG_SLIP=y
 CONFIG_SLIP_COMPRESSED=y
 CONFIG_SLIP_MODE_SLIP6=y
@@ -323,7 +314,6 @@ CONFIG_USB_NET_MCS7830=y
 CONFIG_MSM_RMNET_USB=y
 CONFIG_WCNSS_CORE=y
 CONFIG_INPUT_EVDEV=y
-CONFIG_INPUT_EVBUG=m
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_MATRIX=y
 CONFIG_KEYBOARD_PMIC8XXX=y
@@ -334,11 +324,8 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_TOUCHSCREEN_CYTTSP_I2C_QC=y
 CONFIG_TOUCHSCREEN_MELFAS100_TS=y
 CONFIG_TOUCHSCREEN_ATMXT=y
-CONFIG_TOUCHSCREEN_SY3200=y
-CONFIG_TOUCHSCREEN_SY3400=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_TEST_REPORTING=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_KEYCHORD=y
@@ -365,14 +352,11 @@ CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_QUP=y
 CONFIG_SPI=y
 CONFIG_SPI_QUP=y
-CONFIG_SPI_SPIDEV=m
 CONFIG_SLIMBUS_MSM_CTRL=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_SX150X=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_BATTERY_MSM is not set
-CONFIG_ISL9519_CHARGER=y
-CONFIG_SMB349_CHARGER=y
 CONFIG_PM8921_CHARGER=y
 CONFIG_PM8921_BMS=y
 CONFIG_BATTERY_BCL=y
@@ -385,8 +369,6 @@ CONFIG_THERMAL_TSENS8960=y
 CONFIG_THERMAL_PM8XXX=y
 CONFIG_THERMAL_MONITOR=y
 CONFIG_MFD_PM8921_CORE=y
-CONFIG_MFD_PM8821_CORE=y
-CONFIG_MFD_PM8038_CORE=y
 CONFIG_MFD_PM8XXX_SPK=y
 CONFIG_MFD_PM8XXX_BATT_ALARM=y
 CONFIG_WCD9304_CODEC=y
@@ -432,7 +414,6 @@ CONFIG_MSM_CSI20_HEADER=y
 # CONFIG_S5K3L1YX is not set
 # CONFIG_IMX091 is not set
 CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=m
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
@@ -496,7 +477,6 @@ CONFIG_USB_QCOM_DIAG_BRIDGE=y
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_QCOM_KS_BRIDGE=y
 CONFIG_USB_GADGET=y
-CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_CI13XXX_MSM=y
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_RMNET_CTRL_SMD=y
@@ -508,7 +488,6 @@ CONFIG_MMC_CLKGATE=y
 CONFIG_MMC_PARANOID_SD_INIT=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_MMC_BLOCK_BOUNCE is not set
-CONFIG_MMC_TEST=m
 CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC2_SUPPORT is not set
@@ -538,15 +517,12 @@ CONFIG_MSM_SSBI=y
 CONFIG_SPS=y
 CONFIG_SPS_SUPPORT_BAMDMA=y
 CONFIG_MSM_IOMMU=y
-CONFIG_MOBICORE_SUPPORT=m
-CONFIG_MOBICORE_API=m
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_TPIU=y
 CONFIG_CORESIGHT_ETB=y
 CONFIG_CORESIGHT_FUNNEL=y
 CONFIG_CORESIGHT_ETM=y
 CONFIG_CORESIGHT_ETM_DEFAULT_ENABLE=y
-CONFIG_CORESIGHT_EVENT=m
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT3_FS=y
@@ -566,8 +542,6 @@ CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
 CONFIG_NLS_ISO8859_1=y
 CONFIG_PRINTK_TIME=y
-CONFIG_MAGIC_SYSRQ=y
-CONFIG_LOCKUP_DETECTOR=y
 CONFIG_LOCKUP_IPI_CALL_WDT=y
 # CONFIG_SCHED_DEBUG is not set
 CONFIG_TIMER_STATS=y
@@ -577,9 +551,6 @@ CONFIG_ENABLE_MEMKILL_TRACER=y
 #CONFIG_DEBUG_USER is not set
 CONFIG_PID_IN_CONTEXTIDR=y
 CONFIG_CRYPTO_TWOFISH=y
-CONFIG_CRYPTO_DEV_QCRYPTO=m
-CONFIG_CRYPTO_DEV_QCE=m
-CONFIG_CRYPTO_DEV_QCEDEV=m
 CONFIG_CRC_CCITT=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_WEXT is not set
@@ -612,3 +583,11 @@ CONFIG_MOT_UTAG=m
 CONFIG_ALSA_TO_H2W=y
 CONFIG_CHARGER_BQ5101XB=y
 CONFIG_KERNEL_LZO=y
+# CONFIG_MSM_RESET_MODEM is not set
+# CONFIG_MSM_DMA_TEST is not set
+# CONFIG_MSM_BUSPM_DEV is not set
+# CONFIG_MSM_ADSPRPC is not set
+# CONFIG_USB_GSPCA is not set
+# CONFIG_LCD_CLASS_DEVICE is not set
+# CONFIG_CRYPTO_RNG is not set
+# CONFIG_CRYPTO_ANSI_CPRNG is not set
