IKULTRAM-320: dts: remove eeprom programming for P1 h/w.
lp8556 eeprom is now preprogrammed by vendor, the eeprom
initialization is no longer needed for revision P1 and
further.

Change-Id: Ic66d5ecc491d5d8fb928215eb28bb8ec9f897279
Signed-off-by: Praveen Bharathi <pbharathi@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/524840
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-by: Klocwork kwcheck <klocwork-kwcheck@sourceforge.mot.com>
Reviewed-by: Check Patch <CHEKPACH@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/msm8960ab-ultram-p0.dts
+++ b/arch/arm/boot/dts/msm8960ab-ultram-p0.dts
@@ -54,6 +54,14 @@
 	tfa9890@34 {
 		status = "disabled";
 	};
+
+	lp8556@2c {
+		ti,lp8556-eeprom-settings = <0x9e 0x02
+					     0xa5 0x3c
+					     0xa6 0x40
+					     0xa7 0xfc>;
+	};
+
 };
 
 /* GSBI12 - I2C */
