dts: display: remove pm8921 L11 always_on flag
VDD@L11 is only used for touch, HW request to disable it when suspend
to save power, enable it when resume. This CR is to remove L11
always_on flag for obake M, so driver can have control.

When obake M panel power down, VDDIO and VDD drop down at the same,
in the spec it requires 5ms, add delay of 6ms after VDDIO.

Change-Id: I973e1c1d3e0feb25776ebd0597e7b6fda2922772
Signed-off-by: Limei Wang <e12499@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/524773
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Check Patch <CHEKPACH@motorola.com>
Reviewed-by: Klocwork kwcheck <klocwork-kwcheck@sourceforge.mot.com>
Reviewed-by: Zachary Crosby <azc095@motorola.com>
Reviewed-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Stephen Rossbach <ccpm12@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/msm8960ab-ultram-common.dtsi
+++ b/arch/arm/boot/dts/msm8960ab-ultram-common.dtsi
@@ -18,6 +18,14 @@
 
 	mmi,product = "mmi,msm8960ab-ultram";
 
+	rpm_regulators: qcom,rpm-regulators {
+		compatible = "qcom,msm-rpm-regulators";
+
+		rpm_8921_l11: 8921_l11 {
+			always_on = <0>;
+		};
+	};
+
 	/* GSBI3 - I2C Touch Bus */
 	i2c@16200000 {
 		status = "okay";
@@ -44,7 +52,6 @@
 			/* Display's regulators and regulator gpio en  */
 			num_disp_reg = <4>;
 
-			/* Display's VCI reg which shared same gpio_en as VDDIO */
 			reg_id_1 = "disp_vci";
 			reg_name_1 = "TOUCH_VDD";
 			reg_min_mv_1 = <3100000>;
@@ -62,9 +69,8 @@
 			reg_gpio_en_init_state_2 = <1>;
 			reg_gpio_en_state_2 = <1>;
 			reg_gpio_en_delay_2 = <0>;
-			reg_gpio_dis_delay_2 =<0>;
+			reg_gpio_dis_delay_2 =<6>; /* min 5ms */
 
-			/* Display's VCI reg which shared same gpio_en as VDDIO */
 			reg_id_3 = "";
 			reg_name_3 = "DISP_VSP";
 			reg_gpio_en_3 = <13>;
