--- a/drivers/char/diag/Kconfig
+++ b/drivers/char/diag/Kconfig
@@ -5,7 +5,6 @@ config DIAG_CHAR
 	default m
 	depends on USB_G_ANDROID || USB_FUNCTION_DIAG || USB_QCOM_MAEMO
 	depends on ARCH_MSM
-	select CRC_CCITT
 	help
 	 Char driver interface for diag user space and diag-forwarding to modem ARM and back.
 	 This enables diagchar for maemo usb gadget or android usb gadget based on config selected.
@@ -21,6 +20,26 @@ config DIAG_OVER_USB
 	 This feature helps segregate code required for DIAG traffic to go over USB.
 endmenu
 
+menu "DIAG traffic over TTY"
+
+config DIAG_OVER_TTY
+	bool "Enable DIAG traffic to go over a tty to userspace"
+        depends on ARCH_MSM && DIAG_OVER_USB
+	default n
+	help
+	 This feature helps segregate code required for DIAG traffic to go over a TTY to userspace.
+endmenu
+
+menu "SDIO support for DIAG"
+
+config DIAG_SDIO_PIPE
+	depends on MSM_SDIO_AL
+	default y
+	bool "Enable 9K DIAG traffic over SDIO"
+	help
+	 SDIO Transport Layer for DIAG Router
+endmenu
+
 menu "HSIC/SMUX support for DIAG"
 
 config DIAGFWD_BRIDGE_CODE
@@ -29,4 +48,30 @@ config DIAGFWD_BRIDGE_CODE
 	bool "Enable QSC/9K DIAG traffic over SMUX/HSIC"
 	help
 	 SMUX/HSIC Transport Layer for DIAG Router
+endmenu
+
+menu "DIAG EXTENSION"
+
+config DIAG_EXTENSION
+	bool "This is a glue which add something on to diag driver"
+	default n
+	depends on DIAG_CHAR
+	help
+	 This feature is used for extension of DIAG CHAR.
+	 It has a role of the glue between DIAG and extension.
+	 Unless you use extension, disable it because this feature has
+	 no meaning.
+endmenu
+
+menu "DIAG EXTENSION - Slate"
+
+config DIAG_EXTENSION_SLATE
+	tristate "Enable extension for slate feature of sprint"
+	default n
+	depends on DIAG_CHAR
+	select DIAG_EXTENSION
+	help
+	 This extension is kernel part of slate feature of sprint.
+	 Add support for Event capture (hardkey and pen tap capture).
+	 If you use slate feature, you must enable it.
 endmenu
