--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1421,4 +1421,11 @@ config MMI_DEVICE_DTBS
 	help
 	  Only include Motorola device specific DTBs to limit the number that
 	  get built during kernel compilation.
+
+config MMI_UNIT_INFO
+	depends on ARCH_MSM
+	default n
+	bool "Motorola Mobility Unit Info"
+	help
+	Provide mechanism to expose unit information to other cpu via smem.
 endif
