arm: msm: build: add option to build motorola dtbs
Introduce a new configuration MMI_DEVICE_DTBS that will allow the
target to only build Motorola devices. If this option is configured
we will omit the QC architecture defaults for apq8084. This also will
enable adding 1kb of padding to the DTB to allow for insertion of
variables into the /chosen node at runtime in the bootloader.

Change-Id: I694c0981e6d4b494e97a1717c095d78bf03e3623
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608885
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1413,4 +1413,12 @@ config KRAIT_REGULATOR
 	 line from the PMIC. This supply line is powered by multiple
 	 regulators running in ganged mode inside the PMIC. Enable
 	 this option to support such configurations.
+
+config MMI_DEVICE_DTBS
+	depends on ARCH_MSM
+	default n
+	bool "Motorola Mobility Device DTBs"
+	help
+	  Only include Motorola device specific DTBs to limit the number that
+	  get built during kernel compilation.
 endif
