arm/dt: dory: Add adcmap table for batt_therm
Update dory board's batt_therm ADC table using 150K_36KOhm.
This table is referenced from LR_MUX1_BATT_THERM index.

Change-Id: I20b530bc0c10cd79d2d4b2909c4d217b06a4ae52
Signed-off-by: Simon Wilson <simonwilson@google.com>

--- a/arch/arm/boot/dts/apq8026-dory/apq8026-dory-pm.dtsi
+++ b/arch/arm/boot/dts/apq8026-dory/apq8026-dory-pm.dtsi
@@ -24,6 +24,100 @@
 			qcom,cn-iadc = <&pm8226_iadc>;
 			status = "okay";
 		};
+
+		/*
+		 * Since negative numbers are not allowed in device trees,
+		 * the first two digits here specify if the last two are
+		 * negative: 0 == positive, 1 == negative.
+		 */
+		adcmap_table {
+			compatible = "qcom,adcmap_table";
+			status = "okay";
+			qcom,adcmap_btm_threshold = <
+				1 0 300 1627
+				1 0 200 1507
+				1 0 100 1345
+				0 0 0 1159
+				0 0 10 1139
+				0 0 20 1120
+				0 0 30 1101
+				0 0 40 1082
+				0 0 50 1064
+				0 0 60 1045
+				0 0 70 1026
+				0 0 80 1008
+				0 0 90 989
+				0 0 100 972
+				0 0 110 954
+				0 0 120 936
+				0 0 130 919
+				0 0 140 902
+				0 0 150 885
+				0 0 160 869
+				0 0 170 853
+				0 0 180 837
+				0 0 190 822
+				0 0 200 807
+				0 0 210 792
+				0 0 220 777
+				0 0 230 763
+				0 0 240 750
+				0 0 250 737
+				0 0 260 724
+				0 0 270 711
+				0 0 280 699
+				0 0 290 687
+				0 0 300 675
+				0 0 310 664
+				0 0 320 653
+				0 0 330 643
+				0 0 340 633
+				0 0 350 623
+				0 0 360 613
+				0 0 370 604
+				0 0 380 595
+				0 0 390 586
+				0 0 400 578
+				0 0 410 570
+				0 0 420 562
+				0 0 430 555
+				0 0 440 547
+				0 0 450 540
+				0 0 460 533
+				0 0 470 527
+				0 0 480 521
+				0 0 490 515
+				0 0 500 509
+				0 0 510 503
+				0 0 520 498
+				0 0 530 492
+				0 0 540 487
+				0 0 550 482
+				0 0 560 478
+				0 0 570 473
+				0 0 580 469
+				0 0 590 465
+				0 0 600 461
+				0 0 610 457
+				0 0 620 453
+				0 0 630 449
+				0 0 640 446
+				0 0 650 442
+				0 0 660 439
+				0 0 670 436
+				0 0 680 433
+				0 0 690 430
+				0 0 700 427
+				0 0 710 425
+				0 0 720 422
+				0 0 730 420
+				0 0 740 417
+				0 0 750 415
+				0 0 760 413
+				0 0 770 411
+				0 0 780 409
+				0 0 790 407>;
+		};
 	};
 
 	qcom,pm8226@1 {
