arm/dt: dory: Add new DT for HW Rev.A
Also change model string for lunchbox.

Change-Id: Iceaf406b6b76671c29a775587729ff3ad01ab274
Signed-off-by: Simon Wilson <simonwilson@google.com>

--- a/arch/arm/boot/dts/apq8026-dory/apq8026-dory-rev-a.dtsi
+++ b/arch/arm/boot/dts/apq8026-dory/apq8026-dory-rev-a.dtsi
@@ -1,5 +1,5 @@
-/* Copyright (c) 2013, The Linux Foundation. All rights reserved.
- * Copyright (c) 2013, LGE Inc.
+/* Copyright (c) 2012, Code Aurora Forum. All rights reserved.
+ * Copyright (c) 2013,2014 LGE Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -11,17 +11,10 @@
  * GNU General Public License for more details.
  */
 
-/dts-v1/;
-/include/ "apq8026-dory/apq8026-dory-lunchbox.dtsi"
+/include/ "apq8026-dory.dtsi"
 
-/ {
-	model = "LGE APQ 8026v2 DORY lunchbox";
-	compatible = "qcom,apq8026", "qcom,msm8926", "qcom,mtp";
-	qcom,board-id = <131 0>;
-	qcom,msm-id = <199 0x20000>,
-		      <219 0x20000>,
-		      <200 0>,
-		      <224 0>,
-		      <200 0x10001>,
-		      <224 0x10001>;
+&soc {
+	sound {
+		dory,mic-en-gpio = <&msmgpio 60 0x00>;
+	};
 };
