--- a/arch/arm/boot/dts/apq8026-dory-rev-a.dts
+++ b/arch/arm/boot/dts/apq8026-dory-rev-a.dts
@@ -1,5 +1,5 @@
 /* Copyright (c) 2013, The Linux Foundation. All rights reserved.
- * Copyright (c) 2013, LGE Inc.
+ * Copyright (c) 2013,2014, LGE Inc.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -12,12 +12,12 @@
  */
 
 /dts-v1/;
-/include/ "apq8026-dory/apq8026-dory-lunchbox.dtsi"
+/include/ "apq8026-dory/apq8026-dory-rev-a.dtsi"
 
 / {
-	model = "LGE APQ 8026v2 DORY lunchbox";
+	model = "LGE APQ 8026v2 DORY rev-a";
 	compatible = "qcom,apq8026", "qcom,msm8926", "qcom,mtp";
-	qcom,board-id = <131 0>;
+	qcom,board-id = <131 0x02>;
 	qcom,msm-id = <199 0x20000>,
 		      <219 0x20000>,
 		      <200 0>,
