ASoC: msm: add support for Mav Fusion
Add audio support for Mav Fusion device with APQ8084, MDM9635
and WCD9320.

Change-Id: I784602bd9689bd370d623ad9a4a40df018ab7ad0
Signed-off-by: Banajit Goswami <bgoswami@codeaurora.org>
(cherry picked from commit e190a49de055ae4a73b19f5c328627b8c898eda6)

--- a/arch/arm/boot/dts/qcom/apq8084-cdp.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-cdp.dtsi
@@ -29,7 +29,6 @@
 &soc {
 	sound {
 		qcom,model = "apq8084-taiko-cdp-snd-card";
-		qcom,hdmi-audio-rx;
 		qcom,cdc-micbias2-headset-only;
 		qcom,ext-mclk-gpio  = <&msmgpio 47 0>;
 	};
@@ -443,8 +442,8 @@
 	};
 };
 
-&slim_msm {
-	taiko_codec {
+&i2c_2 {
+	wcd9xxx_codec@0d {
 		qcom,cdc-micbias1-ext-cap;
 		qcom,cdc-micbias3-ext-cap;
 		qcom,cdc-micbias4-ext-cap;
