--- a/arch/arm/boot/dts/qcom/apq8084-mtp.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mtp.dtsi
@@ -47,7 +47,6 @@
 			"MIC BIAS3 External", "Digital Mic3";
 
 		qcom,cdc-micbias2-headset-only;
-		qcom,ext-mclk-gpio  = <&msmgpio 47 0>;
 	};
 
 	i2c@f9926000 { /* BLSP1 QUP4 */
@@ -270,8 +269,8 @@
 	status = "ok";
 };
 
-&slim_msm {
-	taiko_codec {
+&i2c_2 {
+	wcd9xxx_codec@0d {
 		qcom,cdc-micbias1-ext-cap;
 		qcom,cdc-micbias2-ext-cap;
 		qcom,cdc-micbias3-ext-cap;
