--- a/arch/arm/boot/dts/qcom/apq8084.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084.dtsi
@@ -3186,11 +3186,15 @@
 		qcom,prim-auxpcm-gpio-sync = <&msmgpio 88 0>;
 		qcom,prim-auxpcm-gpio-din  = <&msmgpio 89 0>;
 		qcom,prim-auxpcm-gpio-dout = <&msmgpio 90 0>;
-		qcom,prim-auxpcm-gpio-set = "prim-gpio-tert";
+		qcom,prim-auxpcm-gpio-set = "prim-gpio-prim";
 		qcom,sec-auxpcm-gpio-clk  = <&msmgpio 82 0>;
 		qcom,sec-auxpcm-gpio-sync = <&msmgpio 83 0>;
 		qcom,sec-auxpcm-gpio-din  = <&msmgpio 84 0>;
 		qcom,sec-auxpcm-gpio-dout = <&msmgpio 85 0>;
+		qcom,pri-mi2s-gpio-sclk = <&msmgpio 77 0>;
+		qcom,pri-mi2s-gpio-ws = <&msmgpio 78 0>;
+		qcom,pri-mi2s-gpio-data0 = <&msmgpio 79 0>;
+		qcom,pri-mi2s-gpio-data1 = <&msmgpio 80 0>;
 		qcom,quad-mi2s-gpio-sclk = <&msmgpio 92 0>;
 		qcom,quad-mi2s-gpio-ws = <&msmgpio 93 0>;
 		qcom,quad-mi2s-gpio-data0 = <&msmgpio 94 0>;
@@ -3357,10 +3361,17 @@
 
 	qcom,msm-dai-mi2s {
 		compatible = "qcom,msm-dai-mi2s";
+		qcom,msm-dai-q6-mi2s-prim {
+			compatible = "qcom,msm-dai-q6-mi2s";
+			qcom,msm-dai-q6-mi2s-dev-id = <0>;
+			qcom,msm-mi2s-rx-lines = <2>;
+			qcom,msm-mi2s-tx-lines = <1>;
+		};
+
 		qcom,msm-dai-q6-mi2s-quat {
 			compatible = "qcom,msm-dai-q6-mi2s";
 			qcom,msm-dai-q6-mi2s-dev-id = <3>;
-			qcom,msm-mi2s-rx-lines = <1>;
+			qcom,msm-mi2s-rx-lines = <2>;
 			qcom,msm-mi2s-tx-lines = <1>;
 		};
 	};
