ARM: dts: msm: Keep panel's regs always on
- Keep all the display's regulator power supplies always on
- Config the display backlight as MIPI DSI BK CMD backlight
- Disable mdss_dsi1 pipeline for Ghost's panel

Change-Id: If2a9340edc37225dd27d50b9ef4bb3084431b28b
Signed-off-by: Bang Nguyen <bnguyen1@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/602386
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -97,6 +97,7 @@
 		startup-delay-us = <300>;
 		enable-active-high;
 		regulator-always-on;
+		regulator-boot-on;
 	};
 
 	vdd_disp_vreg: vdd_disp_vreg {
@@ -107,6 +108,7 @@
 		startup-delay-us = <300>;
 		enable-active-high;
 		regulator-always-on;
+		regulator-boot-on;
 	};
 
 	vci_disp_vreg: vci_disp_vreg {
@@ -117,6 +119,7 @@
 		startup-delay-us = <300>;
 		enable-active-high;
 		regulator-always-on;
+		regulator-boot-on;
 	};
 };
 
@@ -130,7 +133,16 @@
 	qcom,dsi-pref-prim-pan = <&mot_smd_720p_vid>;
 	qcom,platform-reset-gpio = <&msmgpio 86 0>;
 	qcom,platform-enable-gpio = <&msmgpio 137 0>;
+	vbat_disp-supply = <&vbat_disp_vreg>;
+	vdd_disp-supply = <&vdd_disp_vreg>;
+	vci_disp-supply = <&vci_disp_vreg>;
+
 };
+
+&mdss_dsi1 {
+        status = "disabled";
+};
+
 
 &pma8084_lvs3 {
 	regulator-always-on;
