--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
@@ -89,6 +89,7 @@
 		qcom,mdss-dsi-bl-max-level = <4095>;
 		qcom,mdss-dsi-dma-trigger = <4>;
 		qcom,mdss-dsi-mdp-trigger = <0>;
+		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 
 		qcom,panel-en-reset-sequence = <1 11>;
 		qcom,panel-dis-reset-sequence = <0 3>;
