IK8960KK-140: arm: dts: smq: Changes for camera support on SMQ P1a devices.
Following entries are updated to support camera
    1. cam1_clk
    2. 8820/OV7736 Entries for Driver
    3. GPIO MUX setting

Change-Id: I8431e61b6890d1a2e3e61c2087d9d90636c98934
Signed-off-by: Vijayakumar Gn <vijaygn@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/602517
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Satya Prasad Kottisa <fvgm76@motorola.com>
Reviewed-by: Sudharsan Yettapu <sudharsan.yettapu@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/msm8960-smq-p1a.dts
+++ b/arch/arm/boot/dts/msm8960-smq-p1a.dts
@@ -78,6 +78,22 @@
 				deviceid = [6d736d5f73657269616c5f68736c2e3500];
 				type = <0x001e0015>;
 			};
+
+			Clock@2 {
+				class = [5175616c636f6d6d436c6f636b54726565436c6f636b00];
+				clock = <0x0025>;
+				clockname = [63616d5f636c6b00];
+				deviceid = [342d3030333600];
+				type = <0x001e0015>;
+			};
+
+			Clock@3 {
+				class = [5175616c636f6d6d436c6f636b54726565436c6f636b00];
+				clock = <0x0024>;
+				clockname = [63616d5f636c6b00];
+				deviceid = [342d3030336300];
+				type = <0x001e0015>;
+			};
 		};
 
 		Display@0 {
@@ -357,6 +373,10 @@
 				1p8_via_gpio = <0x01>;
 				class = [4f563838323000];
 				drv_strength = <0x02>;
+				gpio_avdd_en = <0x00000036>;
+				gpio_dig_en = <0x0000003a>;
+				gpio_pwd = <0x0000005f>;
+				gpio_reset = <0x00000061>;
 				i2c,address = <0x00000036>;
 				i2c,type = [6f763838323000];
 				type = <0x00290000>;
@@ -374,6 +394,9 @@
 			I2C,Board@3 {
 				class = [4f563737333600];
 				drv_strength = <0x02>;
+				gpio_avdd_en = <0x00000052>;
+				gpio_pwd = <0x00000059>;
+				gpio_reset = <0x0000004c>;
 				i2c,address = <0x0000003c>;
 				i2c,type = [6f763737333600];
 				type = <0x00290001>;
@@ -382,7 +405,7 @@
 
 		IOMUX@0 {
 			class = [494f4d555800];
-			settings = [0000010101000200000001010002];
+			settings = [00000101010002000000010100020004000200000000040102000000000500010303000005010101030000140001030001001401010300010015000103000100150101030001005d0000000000005d0100000000];
 			type = <0x001e000f>;
 		};
 
