--- a/arch/arm/configs/dory_defconfig
+++ b/arch/arm/configs/dory_defconfig
@@ -190,6 +190,7 @@ CONFIG_NET_SCH_HTB=y
 CONFIG_NET_SCH_PRIO=y
 CONFIG_NET_CLS_FW=y
 CONFIG_BT=y
+CONFIG_MSM_BT_SLEEP=y
 CONFIG_RFKILL=y
 CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
