ARM: dts: msm: correct resume sequence for display reset
Update the device tree entry names to match the names used in the preset
display driver. This sequence will drive the DISP_RST_N line high and
then sleep for 11ms.

Change-Id: I72563ca64b3f3f4b408c50f90cd5a801e8d19a4b
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/603267
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
@@ -91,8 +91,7 @@
 		qcom,mdss-dsi-mdp-trigger = <0>;
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 
-		qcom,panel-en-reset-sequence = <1 11>;
-		qcom,panel-dis-reset-sequence = <0 3>;
+		qcom,mdss-dsi-reset-sequence = <1 11>;
 		qcom,platform-supply-entry1 {
 			qcom,supply-name = "vbat_disp";
 			qcom,supply-min-voltage = <5000000>;
