arm/dt: 8084: lexington: add Synaptics DSX touch
Add Synaptics DSX to the device tree.

Change-Id: Ia170caa4d8dd7480105e788a763d46e3e3b88e6e
Signed-off-by: Alexander Filonenko <vtp684@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/603332
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Konstantin Makariev <kmakariev@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dts
@@ -39,6 +39,24 @@
 	};
 };
 
+&i2c_1 {
+	synaptics@20 {
+		status = "disabled";
+	};
+
+	synaptics_dsx_i2c@20 {
+		compatible = "synaptics,synaptics_dsx_i2c";
+		reg = <0x20>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <84 0>;
+		gpios = <&msmgpio 84 0>, /* IRQ */
+			<&msmgpio 97 0>; /* RESET */
+		touch_vdd-supply = <&pma8084_l19>;
+		synaptics,normal-mode = <1>;
+		synaptics,gpio-config;
+	};
+};
+
 &usb3 {
 	vbus_dwc3-supply = <&smb1357_otg_vreg>;
 };
