--- a/arch/arm/boot/dts/apq8026-dory/apq8026-dory-panel.dtsi
+++ b/arch/arm/boot/dts/apq8026-dory/apq8026-dory-panel.dtsi
@@ -13,7 +13,91 @@
 
 &mdss_mdp {
 	qcom,mdss-pref-prim-intf = "dsi";
-	mdss_dsi_lgd_nano_240_cmd: qcom,mdss_dsi_lgd_nano_240_cmd {
+	dsi_nt35310_280p_cmd: qcom,mdss_dsi_nt35310_280p_cmd {
+		qcom,mdss-dsi-panel-name = "nt35310 280p command mode dsi panel";
+		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
+		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
+		qcom,mdss-dsi-panel-destination = "display_1";
+		qcom,mdss-dsi-panel-framerate = <60>;
+		qcom,mdss-dsi-virtual-channel-id = <0>;
+		qcom,mdss-dsi-stream = <0>;
+		qcom,mdss-dsi-panel-width = <280>;
+		qcom,mdss-dsi-panel-height = <280>;
+		qcom,mdss-dsi-h-front-porch = <11>;
+		qcom,mdss-dsi-h-back-porch = <37>;
+		qcom,mdss-dsi-h-pulse-width = <8>;
+		qcom,mdss-dsi-h-sync-skew = <0>;
+		qcom,mdss-dsi-v-back-porch = <16>;
+		qcom,mdss-dsi-v-front-porch = <30>;
+		qcom,mdss-dsi-v-pulse-width = <1>;
+		qcom,mdss-dsi-h-left-border = <0>;
+		qcom,mdss-dsi-h-right-border = <0>;
+		qcom,mdss-dsi-v-top-border = <0>;
+		qcom,mdss-dsi-v-bottom-border = <0>;
+		qcom,mdss-pan-physical-width-dimension = < 58 >;
+		qcom,mdss-pan-physical-height-dimension = < 103 >;
+		qcom,mdss-dsi-bpp = <24>;
+		qcom,mdss-dsi-color-order = <0>;
+		qcom,mdss-dsi-underflow-color = <0xff>;
+		qcom,mdss-dsi-border-color = <0>;
+		qcom,mdss-dsi-on-command = [
+			05 01 00 00 B0 00 01 11
+			39 01 00 00 00 00 03 ED 01 FE /* unlock cmd2 */
+			39 01 00 00 00 00 06 3B 43 74 74 28 32 /* VBP, VFP, HBP, HFP setting */
+			39 01 00 00 00 00 02 36 D4 /* SET_ADDRESS_MODE */
+			39 01 00 00 00 00 02 3A 76 /* SET_PIXEL_FORMAT */
+			39 01 00 00 00 00 02 26 01 /* SET_GAMMA_CURVE */
+			39 01 00 00 00 00 02 35 00 /* SET_TEAR_ON */
+			39 01 00 00 B0 00 02 44 00 /* SET_TEAR_LINE */
+			39 01 00 00 00 00 02 B0 00 /* DISPLAY_CTRL */
+			39 01 00 00 00 00 04 B1 1C 1C 04 /* front & backporch setting */
+			39 01 00 00 00 00 04 B2 8D 8D 8D /* framerate */
+			39 01 00 00 00 00 02 B4 3F /* Column Inv */
+			39 01 00 00 00 00 02 B7 20 /* DISPLAY_CTRL2 REV ON */
+			39 01 00 00 00 00 05 C0 50 50 00 00 /* PWR_CTRL1(GVDDP/N) : +4.8V/-4.8V */
+			39 01 00 00 00 00 02 C4 40 /* PWR_CTRL5(Vcom 40(Default)) */
+			39 01 00 00 00 00 02 BF AA /* set the register to CMD2_P1 Register(E0h ~ E8h, 00h, EFh) */
+			39 01 00 00 00 00 02 DF 10 /* SLEEP OUT OTP Read off */
+			39 01 00 00 00 00 05 E9 AA 00 00 00 /* mipi.write 0x39 0xE9 0xAA 0x00 0x00 0x00 */
+			39 01 00 00 B0 00 02 00 AA /* mipi.write 0x39 0x00 0xAA */
+			39 01 00 00 00 00 05 2A 00 14 01 2B /* Set Hori address 21~300(280) */
+			39 01 00 00 B0 00 05 2B 00 C8 01 DF /* Set Vert address 200~479(280) */
+			05 01 00 00 00 00 01 29];
+		qcom,mdss-dsi-off-command = [
+			05 01 00 00 05 00 01 28
+			05 01 00 00 A0 00 01 10];
+		qcom,mdss-dsi-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-off-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-idle-on-command = [05 01 00 00 01 00 01 39];
+		qcom,mdss-dsi-idle-on-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-idle-off-command = [05 01 00 00 01 00 01 38];
+		qcom,mdss-dsi-idle-off-command-state = "dsi_hs_mode";
+		qcom,mdss-dsi-h-sync-pulse = <1>;
+		qcom,mdss-dsi-traffic-mode = <2>;
+		qcom,mdss-dsi-lane-map = <0>;
+		qcom,mdss-dsi-bllp-eof-power-mode;
+		qcom,mdss-dsi-bllp-power-mode;
+		qcom,mdss-dsi-lane-0-state;
+		qcom,mdss-dsi-te-pin-select = <1>;
+		qcom,mdss-dsi-te-v-sync-rd-ptr-irq-line = <0x2c>;
+		qcom,mdss-dsi-te-dcs-command = <1>;
+		qcom,mdss-dsi-te-check-enable;
+		qcom,mdss-dsi-te-using-te-pin;
+		qcom,mdss-dsi-panel-timings = [3F 10 03 00 19 19 0E 12 0E 03 04 00];
+		qcom,mdss-dsi-t-clk-post = <0x32>;
+		qcom,mdss-dsi-t-clk-pre = <0x37>;
+		qcom,mdss-dsi-bl-pmic-pwm-frequency = <100>;
+		qcom,mdss-dsi-bl-min-level = <1>;
+		qcom,mdss-dsi-bl-max-level = <255>;
+		qcom,mdss-dsi-dma-trigger = <4>;
+		qcom,mdss-dsi-mdp-trigger = <0>;
+		qcom,mdss-dsi-reset-sequence = <1 100>, <0 100>, <1 100>;
+		qcom,mdss-dsi-bl-pmic-control-type = "bl_external";
+
+		qcom,cont-splash-enabled;
+	};
+
+	dsi_lgd_nano_240_cmd: qcom,mdss_dsi_lgd_nano_240_cmd {
 		qcom,mdss-dsi-panel-name = "Nano 240p command mode dsi panel";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_cmd_mode";
@@ -85,7 +169,7 @@
 };
 
 &mdss_dsi0 {
-	qcom,dsi-pref-prim-pan = <&mdss_dsi_lgd_nano_240_cmd>;
+	qcom,dsi-pref-prim-pan = <&dsi_nt35310_280p_cmd>;
 	vdd-supply = <&pm8226_l18>;
 	qcom,platform-supply-entry1 {
 		qcom,supply-name = "vdd";
