--- a/arch/arm/configs/dory_defconfig
+++ b/arch/arm/configs/dory_defconfig
@@ -209,6 +209,9 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 # CONFIG_MOUSE_PS2 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
+CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
 CONFIG_TOUCHSCREEN_MELFAS_MMS136=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
