arm/dt: dory: fix synaptics touch params
Change-Id: Ica1f19cc368511ae657799f7a545aa7d7dbc5198
Signed-off-by: Jongrak Kwon <jongrak.kwon@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/apq8026-dory/apq8026-dory-input.dtsi
+++ b/arch/arm/boot/dts/apq8026-dory/apq8026-dory-input.dtsi
@@ -44,12 +44,8 @@
 			vcc_i2c-supply = <&pm8226_lvs1>;
 			synaptics,reset-gpio = <&msmgpio 16 0x00>;
 			synaptics,irq-gpio = <&msmgpio 17 0x2008>;
-			synaptics,panel-x = <1080>;
-			synaptics,panel-y = <1920>;
-			synaptics,button-map = <158 139>;
 			synaptics,i2c-pull-up;
-			synaptics,reg-en;
-			synaptics,fw-image-name = "synaptics/PR1237618-DS4.3.5.0.16.img";
+			synaptics,fw-image-name = "synaptics_fw.bin";
 			status = "disable";
 		};
 
