arm/dt: dory: enable synaptics touch for rev.A
Change-Id: I8e0c6dcda4690e290d7845d6e125b7adffd3cb35
Signed-off-by: choongryeol.lee <choongryeol.lee@lge.com>
Signed-off-by: Jongrak Kwon <jongrak.kwon@lge.com>
Signed-off-by: Devin Kim <dojip.kim@lge.com>

--- a/arch/arm/boot/dts/apq8026-dory/apq8026-dory-input.dtsi
+++ b/arch/arm/boot/dts/apq8026-dory/apq8026-dory-input.dtsi
@@ -40,13 +40,13 @@
 			reg = <0x20>;
 			interrupt-parent = <&msmgpio>;
 			interrupts = <17 0x2008>;
-			vdd-supply = <&pm8226_l19>;
+			vdd-supply = <&pm8226_l28>;
 			vcc_i2c-supply = <&pm8226_lvs1>;
 			synaptics,reset-gpio = <&msmgpio 16 0x00>;
 			synaptics,irq-gpio = <&msmgpio 17 0x2008>;
 			synaptics,i2c-pull-up;
 			synaptics,fw-image-name = "synaptics_fw.bin";
-			status = "disable";
+			status = "disabled";
 		};
 
 		melfas_mms136@48 {
@@ -67,7 +67,7 @@
 			melfas,button-map = <158 139>;
 			melfas,product = "LUNCHBOX";
 			melfas,fw-image-name = "melfas/M42_CoreV32_ConfigV01.mfsb";
-			status = "ok";
+			status = "disabled";
 		};
 	};
 
