--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -121,6 +121,23 @@
 		regulator-always-on;
 		regulator-boot-on;
 	};
+
+	i2c_12: i2c@f9968000 { /* BLSP12 */
+		status = "ok";
+		cell-index = <12>;
+		compatible = "qcom,i2c-qup";
+		#address-cells = <1>;
+		#size-cells = <0>;
+		reg-names = "qup_phys_addr";
+		reg = <0xf9968000 0x1000>;
+		interrupt-names = "qup_err_intr";
+		interrupts = <0 106 0>;
+		qcom,i2c-bus-freq = <100000>;
+		qcom,i2c-src-freq = <19200000>;
+		qcom,sda-gpio = <&msmgpio 49 0>;
+		qcom,scl-gpio = <&msmgpio 50 0>;
+		qcom,master-id = <84>;
+	};
 };
 
 #include "dsi-panel-mot-smd-720p-video.dtsi"
