arm/dt: 8084: lexington: Configure BT/Wlan chip
Use msmgpio 119 for wlan_vreg
Remove wrong GPIOs 82-85
Signed-off-by: Liejun Tao <L.J.Tao@motorola.com>

Change-Id: I94388c5cdbca2ee70153e9a25292aaf6e2a2a759
Reviewed-on: http://gerrit.pcs.mot.com/605440
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -25,12 +25,20 @@
 	};
 };
 
+&wlan_vreg {
+	gpio = <&msmgpio 119 0>;
+};
+
 &soc {
 	sound {
 		qcom,model = "apq8084-taiko-cdp-snd-card";
 		qcom,hdmi-audio-rx;
 		qcom,cdc-micbias2-headset-only;
 		qcom,ext-mclk-gpio  = <&msmgpio 47 0>;
+		/delete-property/ qcom,sec-auxpcm-gpio-clk;
+		/delete-property/ qcom,sec-auxpcm-gpio-sync;
+		/delete-property/ qcom,sec-auxpcm-gpio-din;
+		/delete-property/ qcom,sec-auxpcm-gpio-dout;
 	};
 
 	gpio_keys {
