arm/dts: apq8084: add mic audio routing for lexington
Updated the audio routing for mic paths for Lexington.

Change-Id: Ieb41ad24fe420c4d04afed77bef317d321b146e1
Signed-off-by: Qiang Qiu <qqiu@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/605830
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Rajasekhar Goparaju <chb764@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -40,6 +40,19 @@
 		/delete-property/ qcom,sec-auxpcm-gpio-sync;
 		/delete-property/ qcom,sec-auxpcm-gpio-din;
 		/delete-property/ qcom,sec-auxpcm-gpio-dout;
+
+		qcom,audio-routing =
+			"RX_BIAS", "MCLK",
+			"LDO_H", "MCLK",
+			"AIF4 MAD", "MCLK",
+			"AMIC1", "MIC BIAS4 External",
+			"MIC BIAS4 External", "Tertiary Mic",
+			"AMIC2", "MIC BIAS2 External",
+			"MIC BIAS2 External", "Headset Mic",
+			"AMIC3", "MIC BIAS1 External",
+			"MIC BIAS1 External", "Handset Mic",
+			"AMIC4", "MIC BIAS3 External",
+			"MIC BIAS3 External", "Secondary Mic";
 	};
 
 	gpio_keys {
