--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -297,7 +297,7 @@
 
 	qcom,clk-rates = <400000 20000000 25000000 50000000 100000000 192000000 384000000>;
 	qcom,nonremovable;
-	qcom,bus-speed-mode = "HS400_1p8v", "HS200_1p8v", "DDR_1p8v";
+	qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
 	status = "ok";
 };
 
