--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -626,4 +626,5 @@ source "drivers/misc/altera-stapl/Kconfig"
 source "drivers/misc/mei/Kconfig"
 source "drivers/misc/vmw_vmci/Kconfig"
 source "drivers/misc/qcom/Kconfig"
+source "drivers/misc/stm401/Kconfig"
 endmenu
