arm/dt: 8084: lexington: Add BCM20795 NFC driver
Change-Id: I64efd6b6947176f8e41667902866a87e00a229e5
Signed-off-by: Balachandar Swami <w60013@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/607041
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dts
@@ -78,6 +78,15 @@
 		hs_det_micvdd-supply = <&pma8084_l18>;
 		ti,tpa6165-always-on-micbias = <1>;
 	};
+	bcm2079x@76 {
+		compatible = "brcm,bcm2079x";
+		reg = <0x76>;
+		interrupt-parent = <&msmgpio>;
+		interrupts = <8 0>; /* NFC_IRQ */
+		gpios = <&pma8084_mpps 5 0>, /* NFC_WAKE */
+			<&msmgpio 8 0>, /* NFC_IRQ */
+			<&msmgpio 116 0>; /* REG_PU */
+	};
 };
 
 &usb3 {
