defconfig: 8084: enable stm401 driver
Enable the stm401 kernel driver for interfacing with
the sensorhub

Change-Id: I73fd158470b3817aa9a67502a0af493a5787db0d
Signed-off-by: Dan Moore <dtmoore@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-by: Robert Wiegand <Robert.P.Wiegand@motorola.com>
Signed-off-by: Chris Fries <cfries@motorola.com>

--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -669,5 +669,6 @@ CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_PROC_DEVICETREE=y
+CONFIG_SENSORS_STM401=y
 CONFIG_ALSA_TO_H2W=y
 CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE=y
