--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -244,6 +244,7 @@ config SND_SOC_APQ8084
 	select QTI_PP
 	select SND_SOC_CPE
 	select DOLBY_DS2
+	select SND_SOC_TPA6165A2
 	help
 	 To add support for SoC audio on APQ8084.
 	 This will enable sound soc drivers which
